governance-shared/baselines/1.17.0/references/04-risk-issue-rules.md
# 椋庨櫓涓庨棶棰樼害鏉熻鍒?
鏈鍒欓€傜敤浜庨闄╁拰闂鐨勮瘑鍒€佽瘎浼般€佸簲瀵瑰拰鍗囩骇銆傞闄╀笌闂蹇呴』鍒嗙绠＄悊銆?
---

## 1. 椋庨櫓涓庨棶棰樼殑鍖哄垎

| | Risk锛堥闄╋級 | Issue锛堥棶棰橈級 |
|--|--|--|
| 瀹氫箟 | 鍙兘鍙戠敓浣嗗皻鏈彂鐢?| 宸茬粡鍙戠敓姝ｅ湪褰卞搷椤圭洰 |
| 鎬ц川 | 娼滃湪濞佽儊 | 瀹為檯闂 |
| 绠＄悊鐩爣 | 闄嶄綆姒傜巼鎴栧奖鍝?| 灏藉揩瑙ｅ喅 |
| 鏂囦欢 | `risks/risk-register.md` | `issues/issue-register.md` |

### 1.1 鍒ゅ畾瑙勫垯

1. 濡傛灉鏌愪簨椤瑰凡缁忓彂鐢燂紝涓嶅緱鐧昏涓?Risk锛屽簲鐧昏涓?Issue銆?2. 濡傛灉鏌愪簨椤瑰皻鏈彂鐢熶絾瀛樺湪鍙兘鎬э紝涓嶅緱鐧昏涓?Issue锛屽簲鐧昏涓?Risk銆?3. 濡傛灉鏃犳硶鍒ゆ柇锛屾爣璁颁负"寰呯‘璁?锛屼笉寰楁搮鑷綊绫汇€?4. 椋庨櫓瀹為檯鍙戠敓鏃讹紝蹇呴』浠?Risk 杞负 Issue锛?   - 椋庨櫓鐘舵€佹敼涓?`converted_to_issue`銆?   - 鍦?Issue 鐧昏鍐屼腑鏂板瀵瑰簲璁板綍銆?   - 涓や釜璁板綍閫氳繃 ID 浜掔浉鍏宠仈銆?
## 2. 椋庨櫓璇嗗埆

### 2.1 椋庨櫓鏉ユ簮缁村害

| 缁村害 | 妫€鏌ユ柟鍚?|
|------|----------|
| 闇€姹傞闄?| 闇€姹傛ā绯娿€侀绻佸彉鏇淬€佽寖鍥磋敁寤?|
| 鎶€鏈闄?| 鎶€鏈€夊瀷銆佹灦鏋勫彲琛屾€с€佹€ц兘鐡堕 |
| 杩涘害椋庨櫓 | 渚濊禆鏈氨缁€佽祫婧愬啿绐併€佸伐鏈熷帇缂?|
| 璧勬簮椋庨櫓 | 浜哄憳鍙樺姩銆佽兘鍔涗笉瓒炽€佸椤圭洰鍐茬獊 |
| 澶栭儴椋庨櫓 | 鏀跨瓥鍙樺寲銆佸鎴风粍缁囧彉鍔ㄣ€佷緵搴斿晢闂 |
| 璐ㄩ噺椋庨櫓 | 娴嬭瘯涓嶅厖鍒嗐€佺己闄蜂慨澶嶅欢杩?|
| 鎴愭湰椋庨櫓 | 浜哄姏鎴愭湰瓒呮敮銆佽繑宸ユ垚鏈?|
| 鍚堣椋庨櫓 | 瀹夊叏鍚堣銆佹暟鎹悎瑙勩€佷俊鍒涜姹?|

### 2.2 椋庨櫓鎻忚堪瑙勮寖

```
椋庨櫓缂栧彿锛歊-YYYYMMDD-NNN
椋庨櫓鎻忚堪锛氬洜涓?[瑙﹀彂鏉′欢/鍘熷洜]锛屽彲鑳藉鑷?[鍚庢灉]锛屽奖鍝?[鍙楀奖鍝嶅璞銆?椋庨櫓绫诲埆锛歔闇€姹?鎶€鏈?杩涘害/璧勬簮/澶栭儴/璐ㄩ噺/鎴愭湰/鍚堣]
```

## 3. 椋庨櫓璇勪及

### 3.1 姒傜巼璇勭骇

| 绛夌骇 | 姒傜巼鑼冨洿 | 鍒ゅ畾鍙傝€?|
|------|----------|----------|
| 鏋佷綆(1) | <10% | 鍑犱箮涓嶅彲鑳藉彂鐢?|
| 浣?2) | 10%-30% | 鍋舵湁鍙兘 |
| 涓?3) | 30%-50% | 鏈変竴瀹氬彲鑳?|
| 楂?4) | 50%-70% | 杈冨彲鑳藉彂鐢燂紝宸叉湁杩硅薄 |
| 鏋侀珮(5) | >70% | 寰堝彲鑳芥垨宸插湪鍙戠敓 |

### 3.2 褰卞搷璇勭骇

| 绛夌骇 | 杩涘害褰卞搷 | 鎴愭湰褰卞搷 | 璐ㄩ噺褰卞搷 | 鑼冨洿褰卞搷 |
|------|----------|----------|----------|----------|
| 鏋佸皬(1) | <2澶?| <1涓?| 杞诲井缂洪櫡 | 鏃犲彉鍖?|
| 杈冨皬(2) | 2-5澶?| 1-3涓?| 灏戦噺缂洪櫡 | 灞€閮ㄨ皟鏁?|
| 涓瓑(3) | 5-10澶?| 3-5涓?| 闇€淇鍚庡彲鐢?| 妯″潡绾ц皟鏁?|
| 杈冨ぇ(4) | 10-20澶?| 5-10涓?| 鏍稿績鍔熻兘鍙楀奖鍝?| 闇€姹傜骇鍙樻洿 |
| 鏋佸ぇ(5) | >20澶╂垨閲岀▼纰戝欢鏈?| >10涓?| 绯荤粺涓嶅彲鐢?| 鑼冨洿鍩虹嚎鍙樻洿 |

### 3.3 椋庨櫓绛夌骇鐭╅樀

椋庨櫓绛夌骇 = 姒傜巼 x 褰卞搷锛?
- **鏋侀珮(16-25)**锛氬繀椤诲崌绾ц嚦椤圭洰鍙戣捣鏂癸紝鍒跺畾涓撻」搴斿鏂规銆?- **楂?12-15)**锛氬繀椤诲崌绾ц嚦椤圭洰缁忕悊锛屾湁鏄庣‘搴斿璁″垝銆?- **涓?6-11)**锛氶」鐩粍璺熻釜绠＄悊锛屾湁搴斿鎺柦銆?- **浣?1-5)**锛氳褰曡瀵燂紝鏃犻渶涓撻」鎺柦銆?
## 4. 椋庨櫓搴斿绛栫暐

| 绛栫暐 | 閫傜敤鍦烘櫙 | 鍋氭硶 |
|------|----------|------|
| 瑙勯伩 | 椋庨櫓杩囬珮锛屽彲鏀瑰彉璁″垝閬垮厤 | 璋冩暣鏂规鎴栨妧鏈矾绾?|
| 杞Щ | 鑷韩鏃犳硶鎺у埗 | 澶栧寘銆佷繚闄┿€佸悎鍚屾潯娆?|
| 鍑忚交 | 鍙檷浣庢鐜囨垨褰卞搷 | 澧炲姞娴嬭瘯銆佸浠芥柟妗堛€丳OC 楠岃瘉 |
| 鎺ュ彈 | 椋庨櫓鍙帶鎴栧簲瀵规垚鏈繃楂?| 璁板綍骞跺噯澶囧簲鎬ヨ鍒?|

涓瓑鍙婁互涓婇闄╁繀椤诲埗瀹氬簲瀵硅鍒掞紝鍖呭惈锛氶闃叉帾鏂姐€佺紦瑙ｆ帾鏂姐€佽礋璐ｄ汉銆佽Е鍙戞潯浠躲€佸簲鎬ヨ鍒掋€侀璁℃垚鏈€佸叧闂潯浠躲€?
## 5. 椋庨櫓鍗囩骇鏈哄埗

| 瑙﹀彂鏉′欢 | 鍗囩骇鐩爣 | 鏃堕檺 |
|----------|----------|------|
| 椋庨櫓绛夌骇杈惧埌鏋侀珮 | 椤圭洰鍙戣捣鏂?| 24灏忔椂鍐?|
| 椋庨櫓绛夌骇鍗囪嚦楂?| 椤圭洰缁忕悊 | 48灏忔椂鍐?|
| 椋庨櫓宸插彂鐢燂紙杞负闂锛?| 椤圭洰缁忕悊 | 绔嬪嵆 |
| 搴斿鎺柦澶辨晥 | 鍘熻矾寰勪笂涓€绾?| 绔嬪嵆 |

鍗囩骇鏃跺繀椤绘彁渚涳細椋庨櫓鎻忚堪鍙婄瓑绾с€佸凡閲囧彇鎺柦鍙婃晥鏋溿€佸崌绾у師鍥犮€佽嚦灏?涓喅绛栭€夐」锛堝惈鍒╁紛锛夈€佷笉鍗囩骇鐨勫悗鏋溿€?
## 6. 椋庨櫓鐧昏鍐?
### 6.1 瀛楁瀹氫箟

| 瀛楁 | 璇存槑 |
|------|------|
| Risk ID | R-YYYYMMDD-NNN |
| 鎻忚堪 | 椋庨櫓鎻忚堪 |
| 绫诲埆 | 闇€姹?鎶€鏈?杩涘害/璧勬簮/澶栭儴/璐ㄩ噺/鎴愭湰/鍚堣 |
| 姒傜巼 | 1-5 |
| 褰卞搷 | 1-5 |
| 椋庨櫓绛夌骇 | 浣?涓?楂?鏋侀珮 |
| 搴斿绛栫暐 | 瑙勯伩/杞Щ/鍑忚交/鎺ュ彈 |
| 搴斿鎺柦 | 鍏蜂綋鎺柦 |
| 璐熻矗浜?| 璐ｄ换浜?|
| 鐘舵€?| open / monitoring / mitigated / closed / converted_to_issue |
| 璇嗗埆鏃ユ湡 | YYYY-MM-DD |
| 鍏抽棴鏃ユ湡 | YYYY-MM-DD |
| Source | 鏉ユ簮 |

### 6.2 缁存姢棰戠巼

- 椤圭洰鍚姩鏃跺缓绔嬪垵濮嬬増鏈€?- 姣忎釜閲岀▼纰戣瘎瀹″墠鍏ㄩ潰鏇存柊銆?- 姣忓懆椤圭洰渚嬩細纭鏂板鍜岀姸鎬佸彉鍖栥€?- 椋庨櫓鍙戠敓鏃剁珛鍗虫洿鏂般€?
## 7. 闂鐧昏鍐?
### 7.1 瀛楁瀹氫箟

| 瀛楁 | 璇存槑 |
|------|------|
| Issue ID | I-YYYYMMDD-NNN |
| 鎻忚堪 | 闂鎻忚堪 |
| 绫诲瀷 | project锛堥」鐩骇锛? defect锛堜骇鍝佺己闄凤紝MVP鏆傚瓨锛?|
| 褰卞搷鑼冨洿 | 鍙楀奖鍝嶇殑浠诲姟/閲岀▼纰?妯″潡 |
| 涓ラ噸绋嬪害 | P0 / P1 / P2 / P3 |
| 璐熻矗浜?| 璐ｄ换浜?|
| 鐘舵€?| open / in_progress / blocked / resolved / closed |
| 鎻愬嚭鏃ユ湡 | YYYY-MM-DD |
| 瑙ｅ喅鏃ユ湡 | YYYY-MM-DD |
| 瑙ｅ喅鏂规 | 澶勭悊鏂瑰紡鍜岀粨鏋?|
| Source | 鏉ユ簮 |

### 7.2 闂涓庝换鍔＄殑鍏宠仈

- 姣忎釜闂搴斿叧鑱斿埌鍙楀奖鍝嶇殑浠诲姟锛圛ssue Ref 瀛楁锛夈€?- 浠诲姟鍥犻棶棰橀樆濉炴椂锛屼换鍔＄姸鎬佹敼涓?`blocked`锛屽苟濉啓 Issue Ref銆?- 闂瑙ｅ喅鍚庯紝闃诲浠诲姟搴旀仮澶嶄负 `in_progress`銆?
## 8. Change Log

椋庨櫓鐧昏鍐屽拰闂鐧昏鍐屽簳閮ㄥ悇鑷淮鎶?Change Log锛屾牸寮忓悓浠诲姟鐪嬫澘銆侰hange Log 娲昏穬鍖轰笂闄?50 琛屾垨瓒呰繃 30 澶╂椂瑙﹀彂鎸夋湀褰掓。鍒?`change-log/archive/YYYYMM-change-log.md`锛屽苟缁存姢 `change-log/index.md` 鏈堜唤瀵艰埅锛堜笌 06/03 鍙峰綊妗ｈ鍒欎竴鑷达級銆?
### 8.1 Issue 涓讳綋鎷嗗垎瑙勫垯

issue-register 涓讳綋鎷嗗垎锛堜笌 risk-register 瀵归綈锛夛細
- 瑙﹀彂锛?30 鏉¤褰?- 绛栫暐锛歚resolved`/`closed` 鐘舵€佺殑 issue 褰掓。鍒?`issues/archive/YYYY-issue-register.md`
- 涓讳綋浠呬繚鐣?`open`/`in_progress`/`blocked` 鐘舵€佺殑 issue
- 褰掓。鍚庣淮鎶?`issues/index.md`
- 褰掓。鎿嶄綔璁板綍鍦?Change Log 涓?
## 9. 绾ц仈浼犳挱瑙勫垯

鏈疄浣擄紙Risk / Issue锛夌姸鎬佸彉鏇存椂锛屾寜浠ヤ笅瑙勫垯瑙﹀彂涓嬫父鍔ㄤ綔銆傚姩浣滃垎涓夌被锛?- [AUTO] 鍐欐淳鐢熻鍥撅紙绱㈠紩/寰呭姙锛夛紝浣庨闄╋紝鐩存帴鎵ц
- [CHECK] 鍙鏍￠獙锛屾鏌ュ叧鑱旀槸鍚﹀瓨鍦?涓€鑷?- [SUGGEST] 鍐欎簨瀹炴簮鎴栧奖鍝嶅叾浠栧疄浣擄紝鍔犲叆寤鸿鏇存柊娓呭崟寰?PM 纭

> **AUTO 浣滅敤鍩熷０鏄?*锛欰UTO 浠呬綔鐢ㄤ簬闈炰簨瀹炴簮鐨勬淳鐢熻鍥撅紝涓嶈Е纰颁换浣曚簨瀹炴簮鏂囦欢銆備簨瀹炴簮鍐欏叆锛堝惈 pending 鐧昏锛変竴寰嬪彈 `skill-contract.md` 绗?5 鏉＄害鏉熴€?
鎵ц椤哄簭锛氬厛 AUTO 鈫?鍐?CHECK 鈫?鏈€鍚?SUGGEST銆?鍚屼竴澶勭悊娴佺▼鍐咃紝绾ц仈鍔ㄤ綔鍙墽琛屼竴娆★紱澶氫釜 SUGGEST 姹囨€讳负鍚屼竴鎵瑰缓璁竻鍗曪紝娴佺▼鏈熬缁熶竴杈撳嚭銆?鎵ц瀹屾瘯鍚庯紝14 鍙疯嚜鏌ユ竻鍗曢獙璇佸畬鏁存€с€?
> **寮哄埗鎵ц瑕佹眰**锛堣 `00-pm-main-rules.md` 搂8a锛夛細浠ヤ笂 AUTO/CHECK/SUGGEST 鍔ㄤ綔涓嶅緱闈欓粯璺宠繃銆係UGGEST 蹇呴』鍛堢幇缁?PM 纭锛屼笉寰椾互"鐢ㄦ埛鏈姹?涓虹敱鐪佺暐銆傛祦绋嬫湯灏惧繀椤昏緭鍑?绾ц仈瀹屾暣鎬?缁撹銆?
Risk 鍒涘缓 鈫?  [AUTO] 鏇存柊 risk-register 琛嶇敓绱㈠紩锛堣嫢宸叉媶鍒嗭級
  [SUGGEST] 鑻?risk.owner 瀛樺湪 鈫?寤鸿鍦?personal-todo-index 杩藉姞璺熻繘鏉＄洰

Risk 鐘舵€?鈫?closed 鈫?  [AUTO] 鏇存柊 personal-todo-index 涓叧鑱旀潯鐩姸鎬?  [CHECK] 妫€鏌ユ槸鍚︽湁 task 鐨?Risk Ref 鎸囧悜鏈闄?
Risk 鐘舵€?鈫?converted_to_issue 鈫?  [SUGGEST] 蹇呴』鍦?issue-register 鏂板瀵瑰簲 issue锛屽弻鍚?ID 鍏宠仈锛埪? 瑙勫垯 4锛?  [AUTO] 鏇存柊 risk-register 鍜?issue-register 鐨勮鐢熺储寮?  [SUGGEST] 妫€鏌ユ槸鍚︽湁 task 寮曠敤鏈闄?鈫?寤鸿鏇存柊涓哄紩鐢ㄦ柊 issue

Issue 鍒涘缓 鈫?  [AUTO] 鏇存柊 issue-register 琛嶇敓绱㈠紩锛堣嫢宸叉媶鍒嗭級
  [CHECK] 鑻ュ惈 Risk Ref 鈫?楠岃瘉鍏宠仈椋庨櫓瀛樺湪涓旂姸鎬佸悎鐞?  [SUGGEST] 鑻?issue.owner 瀛樺湪 鈫?寤鸿鍦?personal-todo-index 杩藉姞澶勭悊鏉＄洰
  [SUGGEST] 鑻ュ叧鑱?task-id 鈫?寤鸿灏嗗搴?task 鐘舵€佽涓?blocked

Issue 鐘舵€?鈫?resolved/closed 鈫?  [AUTO] 鏇存柊 personal-todo-index 涓叧鑱旀潯鐩姸鎬?  [SUGGEST] 妫€鏌ヨ闃诲鐨?task 鈫?寤鸿鎭㈠涓?in_progress
  [CHECK] 鑻ョ敱 Risk 杞寲鑰屾潵 鈫?妫€鏌ュ師 Risk 鐘舵€佹槸鍚﹂渶瑕佸悓姝?
Issue Owner 鍙樻洿 鈫?  [AUTO] 鏇存柊 personal-todo-index 涓 issue 鐨?Owner 瀛楁

### 9.1 鍏抽棴纭浣愯瘉寮哄埗瑕佹眰

> 鏈害鏉熼€傜敤浜?AI 鍦?WF-1/WF-2 绛夋祦绋嬩腑寤鸿鍏抽棴 Risk 鎴?Issue 瀹炰綋鏃躲€偮? 涓讳綋瀹氫箟鍏抽棴鍚庣殑绾ц仈鍔ㄤ綔锛屾湰鑺傚畾涔夊叧闂缓璁湰韬殑杈撳嚭璐ㄩ噺瑕佹眰锛屼袱鑰呬簰琛ャ€?
褰撶骇鑱斾紶鎾秹鍙?Risk 鎴?Issue 鐨勫叧闂缓璁紙鐘舵€?鈫?closed / mitigated / resolved锛夋椂锛孉I 蹇呴』鍦?SUGGEST 鍔ㄤ綔涓樉寮忓垪鍑猴細

1. **鍊欓€夊叧闂」缂栧彿**锛歊isk ID 鎴?Issue ID
2. **鍏抽棴浣愯瘉**锛氬叿浣撹鏄庝负浠€涔堝彲浠ュ叧闂紙鍝釜鍏宠仈 Task 宸?done / 鍝釜瑙﹀彂鏉′欢宸叉秷闄?/ 鐢ㄦ埛鏄庣‘纭宸茶В鍐筹級
3. **鍏宠仈褰卞搷**锛氬叧闂悗鏄惁褰卞搷鍏朵粬 open 瀹炰綋

鏍煎紡锛?
```
寤鸿鍏抽棴锛?1. R-20260810-001锛堜綈璇侊細鍏宠仈浠诲姟 T-20260810-003 宸?done锛岃Е鍙戞潯浠跺凡娑堥櫎锛?2. I-20260811-002锛堜綈璇侊細鐢ㄦ埛纭闂宸茶В鍐筹紝鏃ユ姤 2026-08-14 鎻愬強锛?```

绂佹鍦ㄦ湭鍒楁槑浣愯瘉鐨勬儏鍐典笅杈撳嚭鍏抽棴寤鸿銆傛瑕佹眰涓?`00-pm-main-rules.md` 搂8a 鐨?SUGGEST 寮哄埗鍛堢幇浜掕ˉ锛毬?a 纭繚 SUGGEST 涓嶈璺宠繃锛屾湰鑺傜‘淇濆叧闂被 SUGGEST 蹇呴』鍚彲楠岃瘉璇佹嵁銆?
> 绔埌绔伐浣滄祦鏁版嵁璺緞瑙?`00-pm-main-rules.md` 搂9锛圵F-1~WF-6锛夈€傛湰鏂囦欢 搂9 瀹氫箟 Risk/Issue 瀹炰綋鐨勭骇鑱旇鍒欙紝00鍙?搂9 瀹氫箟璺ㄥ疄浣撶殑瀹屾暣宸ヤ綔娴佽矾寰勶紝涓よ€呬簰琛ヤ笉鏇夸唬銆?
